added is_seen to posts
